--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <meta name="description" content="GOJI's IELTS and Oral English Bootcamp.">
+  <meta name="author" content="GOJI">
+
+  <meta property="og:image" content="https://res.cloudinary.com/gojinet-com/image/upload/v1600012887/GOJI-IELTS-Program_puaywc.png"/>
+  <meta property="og:url" content="https://res.cloudinary.com/gojinet-com/image/upload/v1600012887/GOJI-IELTS-Program_puaywc.png"/>
+
+
+
   <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="assets/img/favicon.png">
   <title>
@@ -335,8 +344,8 @@
                 <h1 class="video-text">IELTS</h1>
                 <h1 class="display-3 text-white">Boost your Speaking Score</h1>
                 <a href="https://bit.ly/GOJI-Tutoring" target="_blank" class="btn btn-primary btn-icon mt-3 mb-sm-0">
-                  <span class="btn-inner--icon"><i class="ni ni-chat-round"></i></span>
-                  <span class="btn-inner--text">Learn More</span>
+                  <span class="btn-inner--icon" ><i class="ni ni-chat-round"></i></span>
+                  <span class="btn-inner--text" style="font-family: 'CeraGR-Bold'; font-size: 18px; ">Learn More</span>
                 </a>
               </div>
             </div>
