--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     <header class="header-4 skew-separator">
       <div class="header-wrapper">
         <nav class="navbar navbar-expand-lg navbar-transparent">
-          <div class="container">
+          <!-- <div class="container">
             <div class="navbar-translate">
               <a class="navbar-brand text-white" href="javascript:;">Creative Tim</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#example-header-4" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -333,7 +333,7 @@
                 </li>
               </ul>
             </div>
-          </div>
+          </div> -->
         </nav>
         <div class="page-header header-video">
           <div class="overlay"></div>
@@ -343,10 +343,14 @@
               <div class="col-lg-7 mx-auto">
                 <h1 class="video-text">IELTS</h1>
                 <h1 class="display-3 text-white">Boost your Speaking Score</h1>
-                <a href="https://bit.ly/GOJI-Tutoring" target="_blank" class="btn btn-primary btn-icon mt-3 mb-sm-0">
+                  <a class="typeform-share button btn-icon mt-3 hover-button" href="https://form.typeform.com/to/ygveOsaV" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#5DA5AA;color:white;cursor:pointer;font-family: 'CeraGR-Bold'; font-size: 22px; line-height:60px;text-align:center;margin:0;height:60px;padding:0px 40px;border-radius:5px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">Learn More
+                  </a>
+                  <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })()
+                  </script>
+                <!-- <a href="https://bit.ly/GOJI-Tutoring" target="_blank" class="btn btn-primary btn-icon mt-3 mb-sm-0">
                   <span class="btn-inner--icon" ><i class="ni ni-chat-round"></i></span>
                   <span class="btn-inner--text" style="font-family: 'CeraGR-Bold'; font-size: 18px; ">Learn More</span>
-                </a>
+                </a> -->
               </div>
             </div>
           </div>
@@ -543,24 +547,24 @@
                         <span style="font-family: 'CeraGR-Regular';">Bootcamp Cost</span>
                         <ul class="list-unstyled my-4">
                           <li class="align-items-center">
-                            <b class="text-primary"style="font-family: 'CeraGR-Medium';">$10</b> <spa style="font-family: 'CeraGR-Regular';"n>Per Hour</span>
+                            <b class="text-primary"style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">$10</b> <spa style="font-family: 'CeraGR-Regular';"n>Per Hour</span>
                           </li>
                           <li class="align-items-center">
-                            <b class="text-primary" style="font-family: 'CeraGR-Medium';">81 Hours</b> <span style="font-family: 'CeraGR-Regular';">Live Instruction</span>
+                            <b class="text-primary" style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">81 Hours</b> <span style="font-family: 'CeraGR-Regular';">Live Instruction</span>
                           </li>
                           <li class="align-items-center">
-                            <b class="text-primary" style="font-family: 'CeraGR-Medium';">9</b> <span style="font-family: 'CeraGR-Regular';">Weeks</span>
+                            <b class="text-primary" style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">9</b> <span style="font-family: 'CeraGR-Regular';">Weeks</span>
                           </li>
                           <li class="align-items-center">
-                            <b class="text-primary" style="font-family: 'CeraGR-Medium';">2</b> <span style="font-family: 'CeraGR-Regular';">Mock Exams</span>
+                            <b class="text-primary" style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">2</b> <span style="font-family: 'CeraGR-Regular';">Mock Exams</span>
                           </li>
                           <li class="align-items-center">
-                            <b class="text-primary" style="font-family: 'CeraGR-Medium';">4</b> <span style="font-family: 'CeraGR-Regular';">Students per Class</span>
+                            <b class="text-primary" style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">4</b> <span style="font-family: 'CeraGR-Regular';">Students per Class</span>
                           </li>
                         </ul>
                       </div>
                       <div class="card-footer bg-transparent">
-                        <a href="mailto:lucas.porter.bakker@gmail.com?subject=Requesting more information about the IELTS Bootcamp" style="font-family: 'CeraGR-Medium';">Questions?</a>
+                        <a href="mailto:lucas.porter.bakker@gmail.com?subject=Requesting more information about the IELTS Bootcamp" style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">Questions?</a>
                       </div>
                     </div>
                   </div>
@@ -603,24 +607,24 @@
                         <span style="font-family: 'CeraGR-Regular';">Bootcamp Cost</span>
                         <ul class="list-unstyled my-4">
                           <li class="align-items-center">
-                            <b class="text-primary"style="font-family: 'CeraGR-Medium';">$9</b> <span style="font-family: 'CeraGR-Regular';">Per Hour</span>
+                            <b class="text-primary"style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">$9</b> <span style="font-family: 'CeraGR-Regular';">Per Hour</span>
                           </li>
                           <li class="align-items-center">
-                            <b class="text-primary" style="font-family: 'CeraGR-Medium';">81 Hours</b> <span style="font-family: 'CeraGR-Regular';">Live Instruction</span>
+                            <b class="text-primary" style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">81 Hours</b> <span style="font-family: 'CeraGR-Regular';">Live Instruction</span>
                           </li>
                           <li class="align-items-center">
-                            <b class="text-primary" style="font-family: 'CeraGR-Medium';">9</b> <span style="font-family: 'CeraGR-Regular';">Weeks</span>
+                            <b class="text-primary" style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">9</b> <span style="font-family: 'CeraGR-Regular';">Weeks</span>
                           </li>
                           <li class="align-items-center">
-                            <b class="text-primary" style="font-family: 'CeraGR-Medium';">2</b> <span style="font-family: 'CeraGR-Regular';">Mock Exams</span>
+                            <b class="text-primary" style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">2</b> <span style="font-family: 'CeraGR-Regular';">Mock Exams</span>
                           </li>
                           <li class="align-items-center">
-                            <b class="text-primary" style="font-family: 'CeraGR-Medium';">4</b> <span style="font-family: 'CeraGR-Regular';">Students per Class</span>
+                            <b class="text-primary" style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">4</b> <span style="font-family: 'CeraGR-Regular';">Students per Class</span>
                           </li>
                         </ul>
                       </div>
                       <div class="card-footer bg-transparent">
-                        <a href="mailto:lucas.porter.bakker@gmail.com?subject=Requesting more information about the IELTS Bootcamp" style="font-family: 'CeraGR-Medium';">Questions?</a>
+                        <a href="mailto:lucas.porter.bakker@gmail.com?subject=Requesting more information about the IELTS Bootcamp" style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">Questions?</a>
                       </div>
                     </div>
                   </div>
@@ -665,8 +669,8 @@
       <div class="container">
         <div class="row row-grid align-items-center mb-5">
           <div class="col-lg-6">
-            <h3 class="text-primary font-weight-light mb-2" style="font-family: 'CeraGR-Medium';">Stay in Touch!</h3>
-            <h4 class="mb-0 font-weight-light" style="font-family: 'CeraGR-Light';">Follow us on any of these platforms.</h4>
+            <h3 class="text-primary font-weight-light mb-2" style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">Stay in Touch!</h3>
+            <h4 class="mb-0 font-weight-light" style="font-family: 'CeraGR-Light';">Engage with us on any of these platforms.</h4>
           </div>
           <div class="col-lg-6 text-lg-center btn-wrapper">
             <!-- <a href="https://www.instagram.com/goji_net/" target="_blank" rel="nofollow" class="btn btn-icon-only btn-instagram rounded-circle" data-toggle="tooltip" data-original-title="Follow us">
@@ -675,11 +679,14 @@
             <a href="https://www.meetup.com/pro/goji" target="_blank" rel="nofollow" class="btn btn-icon-only btn-meetup rounded-circle" data-toggle="tooltip" data-original-title="Join us on Meetup">
               <span class="btn-inner--icon"><i class="fa fa-meetup"></i></span>
             </a>
+            <a href="https://www.linkedin.com/company/gojinet" target="_blank" rel="nofollow" class="btn btn-icon-only btn-meetup-3 rounded-circle" data-toggle="tooltip" data-original-title="Follow us on LinkedIn">
+              <span class="btn-inner--icon"><i class="fa fa-linkedin"></i></span>
+            </a>
             <a href="https://www.instagram.com/goji_net" target="_blank" rel="nofollow" class="btn btn-icon-only btn-meetup-2 rounded-circle" data-toggle="tooltip" data-original-title="Follow us on Instagram">
               <span class="btn-inner--icon"><i class="fa fa-instagram"></i></span>
             </a>
-            <a href="https://www.linkedin.com/company/gojinet" target="_blank" rel="nofollow" class="btn btn-icon-only btn-meetup-3 rounded-circle" data-toggle="tooltip" data-original-title="Follow us on LinkedIn">
-              <span class="btn-inner--icon"><i class="fa fa-linkedin"></i></span>
+            <a href="https://www.facebook.com/GOJI-106671664518967" target="_blank" rel="nofollow" class="btn btn-icon-only btn-meetup-4 rounded-circle" data-toggle="tooltip" data-original-title="Follow us on Facebook">
+              <span class="btn-inner--icon"><i class="fa fa-facebook"></i></span>
             </a>
           </div>
         </div>
@@ -713,6 +720,7 @@
 
       </div>
     </footer>
+
   </div>
   <!--   Core JS Files   -->
   <script src="assets/js/core/jquery.min.js" type="text/javascript"></script>
