--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
   <meta property="og:url" content="https://res.cloudinary.com/gojinet-com/image/upload/v1600012887/GOJI-IELTS-Program_puaywc.png"/>
 
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162110701-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-162110701-1');
+  </script>
+
 
   <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="assets/img/favicon.png">
