privacy and terms footer

--- a/index.html
+++ b/index.html
@@ -704,27 +704,21 @@
         <hr>
         <br>
         <div class="row align-items-center justify-content-md-between">
-          <div class="col-md-6">
+          <div class="col-md-3">
             <div class="copyright" style="font-family: 'CeraGR-Bold';">
-              &copy; 2020 <a href="https://www.gojinet.com/" target="_blank">GOJI</a>.
+              <a href="https://www.gojinet.com/" target="_blank">GOJI</a> &copy; 2020
             </div>
+            <br>
+
+            <div class="copyright" style="font-family: 'CeraGR-Bold';">
+              <a href="https://www.gojinet.com/pages/goji-privacy-policy" target="_blank"  target="_blank" style="font-family: 'CeraGR-Bold' !important; color: RGBA(84, 96, 124, 1.00) !important;">Privacy Policy</a>
+            </div>
+            <div class="copyright" style="font-family: 'CeraGR-Bold';">
+              <a href="https://www.gojinet.com/pages/goji-terms-conditions" target="_blank" target="_blank" style="font-family: 'CeraGR-Bold' !important; color: RGBA(84, 96, 124, 1.00) !important;">Terms and Conditions</a>
+            </div>
+
           </div>
-          <div class="col-md-6">
-            <ul class="nav nav-footer justify-content-end">
-              <li class="nav-item">
-                <a href="https://www.gojinet.com/" class="nav-link" target="_blank" style="font-family: 'CeraGR-Bold' !important;">GOJI App</a>
-              </li>
-              <li class="nav-item">
-                <a href="https://www.gojinet.com/" class="nav-link" target="_blank" style="font-family: 'CeraGR-Bold' !important;">About GOJI</a>
-              </li>
-              <!-- <li class="nav-item">
-                <a href="https://www.creative-tim.com/blog" class="nav-link" target="_blank">Blog</a>
-              </li> -->
-              <!-- <li class="nav-item">
-                <a href="" class="nav-link" target="_blank">License</a>
-              </li> -->
-            </ul>
-          </div>
+
         </div>
         <br>
 
