--- a/index.html
+++ b/index.html
@@ -716,6 +716,9 @@
             <div class="copyright" style="font-family: 'CeraGR-Bold';">
               <a href="https://www.gojinet.com/pages/goji-terms-conditions" target="_blank" target="_blank" style="font-family: 'CeraGR-Bold' !important; color: RGBA(84, 96, 124, 1.00) !important;">Terms and Conditions</a>
             </div>
+            <div class="copyright" style="font-family: 'CeraGR-Bold';">
+              <a href="mailto:support@gojinet.com?subject=Question about the GOJI IELTS Program" target="_blank" target="_blank" style="font-family: 'CeraGR-Bold' !important; color: RGBA(84, 96, 124, 1.00) !important;">Contact</a>
+            </div>
 
           </div>
 
