testing rmoving typeform

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <meta name="description" content="GOJI IELTS Bootcamp and Oral English Program.">
+  <meta name="description" content="GOJI's IELTS and Oral English Bootcamp.">
   <meta name="author" content="GOJI">
 
   <meta property="og:image" content="https://res.cloudinary.com/gojinet-com/image/upload/v1600012887/GOJI-IELTS-Program_puaywc.png"/>
@@ -282,14 +282,6 @@
                         <li class="align-items-center">
                           <b class="text-primary" style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">4</b> <span style="font-family: 'CeraGR-Regular';">Students per Class</span>
                         </li>
-                        <br>
-                        <li class="align-items-center">
-                          <a class="typeform-share button btn-icon mt-3 hover-button" href="https://form.typeform.com/to/kmE4iegW" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#5DA5AA;color:white;cursor:pointer;font-family: 'CeraGR-Bold'; font-size: 18px; line-height:60px;text-align:center;margin:0;height:60px;padding:0px 40px;border-radius:5px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">Register
-                          </a>
-                          <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })()
-                          </script>
-                          <!-- <b class="text-primary" style="font-family: 'CeraGR-Bold'; color: #5DA5AA !important;"><a href="">REGISTER NOW</a></b> -->
-                        </li>
                       </ul>
                     </div>
                     <div class="card-footer bg-transparent">
@@ -324,14 +316,6 @@
                         </li>
                         <li class="align-items-center">
                           <b class="text-primary" style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">4</b> <span style="font-family: 'CeraGR-Regular';">Students per Class</span>
-                        </li>
-                        <br>
-                        <li class="align-items-center">
-                          <a class="typeform-share button btn-icon mt-3 hover-button" href="https://form.typeform.com/to/kmE4iegW" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#5DA5AA;color:white;cursor:pointer;font-family: 'CeraGR-Bold'; font-size: 18px; line-height:60px;text-align:center;margin:0;height:60px;padding:0px 40px;border-radius:5px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">Register
-                          </a>
-                          <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })()
-                          </script>
-                          <!-- <b class="text-primary" style="font-family: 'CeraGR-Bold'; color: #5DA5AA !important;"><a href="">REGISTER NOW</a></b> -->
                         </li>
                       </ul>
                     </div>
