--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="description pl-4">
               <h5 class="title" style="font-family: 'CeraGR-Medium';">Study from Anywhere</h5>
               <p style="font-family: 'CeraGR-Regular';">Our 9-Week Immersive Oral English Bootcamp is a fully remote program using GOJI virtual classroom software, giving students 9 hours of live teaching per week.</p>
-              <a href="https://bit.ly/GOJI-Tutoring" target="_blank" class="text-info" style="font-family: 'CeraGR-Bold';">Let's Go</a>
+              <a href="https://form.typeform.com/to/kmE4iegW" target="_blank" class="text-info" style="font-family: 'CeraGR-Bold';">Let's Go</a>
             </div>
           </div>
           <div class="info info-horizontal info-hover-primary">
@@ -161,7 +161,7 @@
             <div class="description pl-4">
               <h5 class="title" style="font-family: 'CeraGR-Medium';">Small Classes</h5>
               <p style="font-family: 'CeraGR-Regular';">Get plenty of speaking time with small classes of four, to ensure that the experience is immersive and that everyone is building confidence communicating in English.</p>
-              <a href="https://bit.ly/GOJI-Tutoring" target="_blank" class="text-info" style="font-family: 'CeraGR-Bold';">Let's Go</a>
+              <a href="https://form.typeform.com/to/kmE4iegW" target="_blank" class="text-info" style="font-family: 'CeraGR-Bold';">Let's Go</a>
             </div>
           </div>
         </div>
@@ -282,10 +282,22 @@
                         <li class="align-items-center">
                           <b class="text-primary" style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">4</b> <span style="font-family: 'CeraGR-Regular';">Students per Class</span>
                         </li>
+                        <br>
+                        <li class="align-items-center">
+                          <a class="typeform-share button btn-icon mt-3 hover-button" href="https://form.typeform.com/to/kmE4iegW" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#5DA5AA;color:white;cursor:pointer;font-family: 'CeraGR-Bold'; font-size: 18px; line-height:60px;text-align:center;margin:0;height:60px;padding:0px 40px;border-radius:5px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">Register
+                          </a>
+                          <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })()
+                          </script>
+
+                        </li>
                       </ul>
                     </div>
                     <div class="card-footer bg-transparent">
-                      <a href="mailto:lucas.porter.bakker@gmail.com?subject=Requesting more information about the IELTS Bootcamp" style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">Questions?</a>
+                      <!-- Calendly link widget begin -->
+                      <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+                      <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+                      <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/lucasporterbakker/questions-about-the-ielts-bootcamp'});return false;" style="font-family: 'CeraGR-Bold'; color: #5DA5AA !important;">Questions?</a>
+                      <!-- Calendly link widget end -->
                     </div>
                   </div>
                 </div>
@@ -317,10 +329,22 @@
                         <li class="align-items-center">
                           <b class="text-primary" style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">4</b> <span style="font-family: 'CeraGR-Regular';">Students per Class</span>
                         </li>
+                        <br>
+                        <li class="align-items-center">
+                          <a class="typeform-share button btn-icon mt-3 hover-button" href="https://form.typeform.com/to/kmE4iegW" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#5DA5AA;color:white;cursor:pointer;font-family: 'CeraGR-Bold'; font-size: 18px; line-height:60px;text-align:center;margin:0;height:60px;padding:0px 40px;border-radius:5px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">Register
+                          </a>
+                          <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })()
+                          </script>
+
+                        </li>
                       </ul>
                     </div>
                     <div class="card-footer bg-transparent">
-                      <a href="mailto:lucas.porter.bakker@gmail.com?subject=Requesting more information about the IELTS Bootcamp" style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">Questions?</a>
+                      <!-- Calendly link widget begin -->
+                      <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+                      <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+                      <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/lucasporterbakker/questions-about-the-ielts-bootcamp'});return false;" style="font-family: 'CeraGR-Bold'; color: #5DA5AA !important;">Questions?</a>
+                      <!-- Calendly link widget end -->
                     </div>
                   </div>
                 </div>
@@ -446,7 +470,7 @@
           <a href="https://www.gojinet.com/pages/goji-terms-conditions" target="_blank" target="_blank" style="font-family: 'CeraGR-Bold' !important; color: RGBA(84, 96, 124, 1.00) !important;">Terms and Conditions</a>
         </div>
         <div class="copyright" style="font-family: 'CeraGR-Bold';">
-          <a href="mailto:support@gojinet.com?subject=Question about the GOJI IELTS Program" target="_blank" target="_blank" style="font-family: 'CeraGR-Bold' !important; color: RGBA(84, 96, 124, 1.00) !important;">Contact</a>
+          <a href="#" target="_blank" target="_blank" style="font-family: 'CeraGR-Bold' !important; color: RGBA(84, 96, 124, 1.00) !important;">Contact</a>
         </div>
 
       </div>
