--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 </div>
 </div>
 </div> -->
-<section class="pricing-5" id="pricing-6" style="background-image: url('assets/img/kit/pro/ill/bg_pricing5.svg');">
+<section class="pricing-5" id="pricing-6">
   <div class="container pt-5">
     <div class="row">
       <div class="col-md-4 d-flex justify-content-center flex-column">
@@ -504,10 +504,9 @@
 <!-- Plugin for Headrom, full documentation here: https://wicky.nillia.ms/headroom.js/ -->
 <script src="assets/js/plugins/headroom.min.js"></script>
 <!-- Control Center for Argon UI Kit: parallax effects, scripts for the example pages etc -->
-<!--  Google Maps Plugin    -->
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+
 <script src="assets/js/argon-design-system.min.js?v=1.0.2" type="text/javascript"></script>
-<script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
+
 
 </body>
 
