--- a/index.html
+++ b/index.html
@@ -483,13 +483,13 @@
 
 </div>
 <!--   Core JS Files   -->
-<script src="assets/js/core/jquery.min.js" type="text/javascript"></script>
-<script src="assets/js/core/popper.min.js" type="text/javascript"></script>
-<script src="assets/js/core/bootstrap.min.js" type="text/javascript"></script>
-<script src="assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
+<script src="assets/js/core/jquery.min.js" defer type="text/javascript"></script>
+<script src="assets/js/core/popper.min.js" defer type="text/javascript"></script>
+<script src="assets/js/core/bootstrap.min.js" defer type="text/javascript"></script>
+<script src="assets/js/plugins/perfect-scrollbar.jquery.min.js" defer></script>
 
-<script src="assets/js/argon-design-system.min.js?v=1.0.2" type="text/javascript"></script>
-
+<script src="assets/js/argon-design-system.min.js?v=1.0.2" defer type="text/javascript"></script>
+<script src="https://cdn.trackjs.com/agent/v3/latest/t.js" defer></script>
 
 </body>
 
