--- a/index.html
+++ b/index.html
@@ -12,15 +12,7 @@
   <meta property="og:url" content="https://res.cloudinary.com/gojinet-com/image/upload/v1600012887/GOJI-IELTS-Program_puaywc.png"/>
 
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162110701-1"></script>
-  <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-162110701-1');
-  </script>
 
   <link rel="icon" type="image/png" href="assets/img/favicon.png">
   <title>
@@ -252,7 +244,7 @@
             </a>
           </li>
         </ul>
-        <p class="lead mt-0"style="font-family: 'CeraGR-Regular';">Register <strong>before September 27. </strong></p>
+        <p class="lead mt-0"style="font-family: 'CeraGR-Regular';">Register <strong>before October 5. </strong></p>
       </div>
       <div class="col-lg-8 col-md-8 ml-auto mr-auto">
         <div class="tab-content tab-space">
@@ -359,13 +351,13 @@
     <br>
   </section>
 
-  <!-- <div class="cd-section" id="accordion">
+  <div class="cd-section" id="accordion">
 
     <div class="accordion-1">
       <div class="container">
         <div class="row">
           <div class="col-md-6 mx-auto text-center">
-            <h2 class="title mb-3 mt-5">Frequently asked Questions</h2>
+            <h2 class="title mb-3 mt-5">Frequently Asked Questions</h2>
           </div>
         </div>
         <div class="row">
@@ -375,14 +367,14 @@
                 <div class="card-header" id="headingOne">
                   <h5 class="mb-0">
                     <button class="btn btn-link w-100 text-primary text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      Is the program designed by IELTS examiners?
+                      Am I guaranteed to improve my IELTS speaking score?
                       <i class="ni ni-bold-down float-right pt-1"></i>
                     </button>
                   </h5>
                 </div>
                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                   <div class="card-body opacity-8">
-                    Yes! GOJI's IELTS Bootcamp is developed and taught by an IELTS speaking examiner.
+                    Yes! In fact, we will even <strong>refund your tuition</strong> if you do not improve your score during the program.
                   </div>
                 </div>
               </div>
@@ -390,20 +382,20 @@
                 <div class="card-header" id="headingTwo">
                   <h5 class="mb-0">
                     <button class="btn btn-link w-100 text-primary text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      How can i make the payment?
+                      Is the program designed by IELTS examiners?
                       <i class="ni ni-bold-down float-right pt-1"></i>
                     </button>
                   </h5>
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                   <div class="card-body opacity-8">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    Yes. Not only has curriculum been developed by IELTS speaking examiners, but our classes are led by teachers with decades of collective experience preparing students for success with the IELTS examination.
                   </div>
                 </div>
               </div>
 
 
-              <div class="card">
+              <!-- <div class="card">
                 <div class="card-header" id="headingFifth">
                   <h5 class="mb-0">
                     <button class="btn btn-link w-100 text-primary text-left" type="button" data-toggle="collapse" data-target="#collapseFifth" aria-controls="collapseFifth">
@@ -417,13 +409,13 @@
                     Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
   <br><br>
   <footer class="footer">
     <br>
@@ -483,13 +475,30 @@
 
 </div>
 <!--   Core JS Files   -->
-<script src="assets/js/core/jquery.min.js" defer type="text/javascript"></script>
-<script src="assets/js/core/popper.min.js" defer type="text/javascript"></script>
-<script src="assets/js/core/bootstrap.min.js" defer type="text/javascript"></script>
-<script src="assets/js/plugins/perfect-scrollbar.jquery.min.js" defer></script>
+<script src="assets/js/core/jquery.min.js" type="text/javascript"></script>
+<script src="assets/js/core/popper.min.js" type="text/javascript"></script>
+<script src="assets/js/core/bootstrap.min.js" type="text/javascript"></script>
+<script src="assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
+<!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
+<script src="assets/js/plugins/bootstrap-switch.js"></script>
+<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+<script src="assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+<!--  Plugin for the Carousel, full documentation here: http://jedrzejchalubek.com/ -->
+<script src="assets/js/plugins/glide.js" type="text/javascript"></script>
+<!--  Plugin for the DatePicker, full documentation here: https://flatpickr.js.org/ -->
+<script src="assets/js/plugins/moment.min.js"></script>
+<!--	Plugin for Select, full documentation here: https://joshuajohnson.co.uk/Choices/ -->
+<script src="assets/js/plugins/choices.min.js" type="text/javascript"></script>
+<!--  Plugin for the DateTimePicker, full documentation here: https://flatpickr.js.org/ -->
+<script src="assets/js/plugins/datetimepicker.js" type="text/javascript"></script>
+<!-- Plugin for Fileupload, full documentation here: http://www.jasny.net/bootstrap/javascript/#fileinput -->
+<script src="assets/js/plugins/jasny-bootstrap.min.js"></script>
+<!-- Plugin for Headrom, full documentation here: https://wicky.nillia.ms/headroom.js/ -->
+<script src="assets/js/plugins/headroom.min.js"></script>
+<!-- Control Center for Argon UI Kit: parallax effects, scripts for the example pages etc -->
 
-<script src="assets/js/argon-design-system.min.js?v=1.0.2" defer type="text/javascript"></script>
-<script src="https://cdn.trackjs.com/agent/v3/latest/t.js" defer></script>
+<script src="assets/js/argon-design-system.min.js?v=1.0.2" type="text/javascript"></script>
+<script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
 
 </body>
 
