--- a/index.html
+++ b/index.html
@@ -351,6 +351,69 @@
     <br>
   </section>
 
+  <div class="cd-section" id="testimonials">
+
+    <div class="testimonials-1" style="background-image: url('./assets/img/ill/testimonial_bg.svg');">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 ml-auto mr-auto text-center">
+            <h2 class="title">What Students Say</h2>
+          </div>
+        </div>
+        <div id="carousel-testimonials" class="carousel slide carousel-team">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-5 ml-auto">
+                    <h3 class="card-title">Hritvik Khurana</h3>
+                    <h3 class="text-danger">• • •</h3>
+                    <h4 class="lead">
+                      "GOJI's IELTS curriculum got me from a <strong>6.5 to 8.5 score in 9 weeks</strong>. If you want to improve fast, this is it!"
+                    </h4>
+                    <a href="mailto:hritvik.khurana08@gmail.com" class="btn btn-info mt-3">Ask Hritvik about his experience</a>
+                  </div>
+                  <div class="col-md-5 p-5 ml-auto">
+                    <div class="p-3">
+                      <img class="img-fluid rounded shadow transform-perspective-right" src="./assets/img/students/GOJI-Students-2.png" alt="First slide">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-5 ml-auto">
+                    <h3 class="card-title">Eva Huang</h3>
+                    <h3 class="text-info">• • •</h3>
+                    <h4 class="lead">
+                      "I was able to <strong>dramatically improve my speaking and writing scores</strong> on the IELTS exam in just two months."
+                    </h4>
+                    <a href="mailto:huang.eva@outlook.com" class="btn btn-info mt-3">Ask Eva about her experience</a>
+                  </div>
+                  <div class="col-md-5 p-5 ml-auto">
+                    <div class="p-3">
+                      <img class="img-fluid rounded shadow transform-perspective-right" src="./assets/img/students/GOJI-Students-1.png" alt="First slide">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carousel-testimonials" role="button" data-slide="prev">
+            <i class="ni ni-bold-left"></i>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carousel-testimonials" role="button" data-slide="next">
+            <i class="ni ni-bold-right"></i>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="cd-section" id="accordion">
 
     <div class="accordion-1">
@@ -374,7 +437,7 @@
                 </div>
                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                   <div class="card-body opacity-8">
-                    Yes! In fact, we will even <strong>refund your tuition</strong> if you do not improve your score during the program.
+                    Yes! In fact, we will even <strong>refund your tuition</strong> if you do not improve your IELTS score by at least one whole point during the program.
                   </div>
                 </div>
               </div>
