removed intial-scale

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+  <meta name="viewport" content="width=device-width">
 
   <meta name="description" content="GOJI's IELTS and Oral English Bootcamp.">
   <meta name="author" content="GOJI">
