--- a/index.html
+++ b/index.html
@@ -130,9 +130,28 @@
       </div>
     </div>
   </header>
-  <br>
-  <br>
-  <div class="section features-6">
+
+  <div class="page-header">
+    <div class="container ">
+      <div class="row">
+        <div class="col-md-8 mx-auto text-center">
+          <h2 class="display-2" style="font-family: 'CeraGR-Medium' !important; font-size: 2.5rem !important; font-weight: 600 !important;">Acing the IELTS exam, is your key to unlocking opportunities abroad.</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="floating-box bg-default">
+          <div class="box text-center">
+            <div class="icon icon-shape bg-success icon-xl rounded-circle text-white">
+              <i class="ni ni-spaceship"></i>
+            </div>
+          </div>
+          <h2 class="lead text-white p-5" style="font-family: 'CeraGR-Medium' !important; ">If English is your second language, think of acing the IELTS exam as getting your international passport. The exam is recognized by 9K+ organisations worldwide, including schools, universities, employers, and immigration authorities. Whether you are an international student or job seeker, a high score and confidence speaking will dramatically improve your opportunity landscape.</h2>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class=" features-6">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6">
@@ -348,7 +367,7 @@
       </div>
     </div>
     <br><br>
-    <br>
+    <br><br>
   </section>
 
   <div class="cd-section" id="testimonials">
@@ -357,7 +376,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 ml-auto mr-auto text-center">
-            <h2 class="title">What Students Say</h2>
+            <h2 class="title" style="font-family: 'CeraGR-Bold' !important;">What Students Say</h2>
           </div>
         </div>
         <div id="carousel-testimonials" class="carousel slide carousel-team">
@@ -366,9 +385,9 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-5 ml-auto">
-                    <h3 class="card-title">Hritvik Khurana</h3>
+                    <h3 class="card-title" style="font-family: 'CeraGR-medium' !important;">Hritvik Khurana</h3>
                     <h3 class="text-danger">• • •</h3>
-                    <h4 class="lead">
+                    <h4 class="lead" style="font-family: 'CeraGR-medium' !important;">
                       "GOJI's IELTS curriculum got me from a <strong>6.5 to 8.5 score in 9 weeks</strong>. If you want to improve fast, this is it!"
                     </h4>
                     <a href="mailto:hritvik.khurana08@gmail.com" class="btn btn-info mt-3">Ask Hritvik about his experience</a>
@@ -385,9 +404,9 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-5 ml-auto">
-                    <h3 class="card-title">Eva Huang</h3>
+                    <h3 class="card-title" style="font-family: 'CeraGR-medium' !important;">Eva Huang</h3>
                     <h3 class="text-info">• • •</h3>
-                    <h4 class="lead">
+                    <h4 class="lead" style="font-family: 'CeraGR-medium' !important;">
                       "I was able to <strong>dramatically improve my speaking and writing scores</strong> on the IELTS exam in just two months."
                     </h4>
                     <a href="mailto:huang.eva@outlook.com" class="btn btn-info mt-3">Ask Eva about her experience</a>
@@ -413,6 +432,8 @@
       </div>
     </div>
   </div>
+
+  <br><br>
 
   <div class="cd-section" id="accordion">
 
